--- a/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
+++ b/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
@@ -22,33 +22,27 @@
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="eppy" selectionStyle="default" indentationWidth="10" reuseIdentifier="eppy" textLabel="j3c-K6-c5T" detailTextLabel="sjE-LG-s4K" rowHeight="46" style="IBUITableViewCellStyleSubtitle" id="Gzx-2j-BOY" userLabel="Eppy">
-                                <rect key="frame" x="0.0" y="92" width="375" height="46"/>
+                                <rect key="frame" x="0.0" y="136" width="375" height="46"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gzx-2j-BOY" id="jys-lM-aJJ">
-                                    <frame key="frameInset" width="375" height="118"/>
+                                    <frame key="frameInset" width="375" height="45.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j3c-K6-c5T">
-                                            <frame key="frameInset" minX="15" minY="5" width="34" height="21"/>
+                                            <frame key="frameInset" minX="15" minY="6" width="33.5" height="20.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sjE-LG-s4K">
-                                            <frame key="frameInset" minX="15" minY="26" width="33" height="15"/>
+                                            <frame key="frameInset" minX="15" minY="26.5" width="33" height="14.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="trailingMargin" secondItem="wa8-v3-srf" secondAttribute="trailing" id="20P-Ku-ulY"/>
-                                        <constraint firstItem="wa8-v3-srf" firstAttribute="leading" secondItem="jys-lM-aJJ" secondAttribute="leadingMargin" id="5cw-Pq-4vW"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="wa8-v3-srf" secondAttribute="bottom" constant="52" id="AkP-M1-mIa"/>
-                                        <constraint firstItem="wa8-v3-srf" firstAttribute="top" secondItem="jys-lM-aJJ" secondAttribute="topMargin" id="COQ-Sf-YPV"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="aiI-RL-mT3" kind="show" id="n4W-Eh-zBF"/>
@@ -81,7 +75,18 @@
                     <view key="view" contentMode="scaleToFill" id="XTv-d7-mKB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mr3-ab-0c2">
+                                <color key="backgroundColor" red="0.13684797286987305" green="0.77443379163742065" blue="0.65935736894607544" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottomMargin" secondItem="mr3-ab-0c2" secondAttribute="bottom" constant="20" id="GHs-nc-Nw9"/>
+                            <constraint firstItem="mr3-ab-0c2" firstAttribute="top" secondItem="XTv-d7-mKB" secondAttribute="topMargin" constant="72" id="I1Z-aq-b9P"/>
+                            <constraint firstItem="mr3-ab-0c2" firstAttribute="leading" secondItem="XTv-d7-mKB" secondAttribute="leadingMargin" id="f5I-6l-eXX"/>
+                            <constraint firstItem="mr3-ab-0c2" firstAttribute="trailing" secondItem="XTv-d7-mKB" secondAttribute="trailingMargin" id="wD9-NN-y4E"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W9r-sX-ZKV" userLabel="First Responder" sceneMemberID="firstResponder"/>
