--- a/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
+++ b/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="aiI-RL-mT3" kind="show" id="n4W-Eh-zBF"/>
+                                    <segue destination="aiI-RL-mT3" kind="show" identifier="episodeSegue" id="n4W-Eh-zBF"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -67,7 +67,7 @@
         <!--Episode Deets-->
         <scene sceneID="y0S-UY-zHZ">
             <objects>
-                <viewController id="aiI-RL-mT3" userLabel="Episode Deets" sceneMemberID="viewController">
+                <viewController id="aiI-RL-mT3" userLabel="Episode Deets" customClass="EpisodeDeetsController" customModule="AC3_2_GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Fjb-oL-Goo"/>
                         <viewControllerLayoutGuide type="bottom" id="bM1-41-ZjV"/>
@@ -110,8 +110,13 @@
                                     <constraint firstItem="bnI-bV-YfY" firstAttribute="leading" secondItem="Moq-X4-G0V" secondAttribute="trailing" constant="5" id="v5V-Lp-OkP"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Summary" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jmd-Qa-qf9">
-                                <frame key="frameInset" minX="16" minY="142" width="343" height="277"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="jmd-Qa-qf9">
+                                <frame key="frameInset" minX="16" minY="142" width="343" height="269"/>
+                                <string key="text">Will attempt to recover by breaking constraint 
+&lt;NSLayoutConstraint:0x6000002850f0 UILabel:0x7fc64b60b580'SeasonNum.EpisodeNum'.leading == UIStackView:0x7fc64b60d940.leadingMargin   (active)&gt;
+
+Make a symbolic breakpoint at UIViewAlertForUnsatisfiableConstraints to catch this in the debugger.
+The methods in the UIConstraintBasedLayoutDebugging category on UIView listed in &lt;UIKit/UIView.h&gt; may also be helpful.</string>
                                 <fontDescription key="fontDescription" name="Baskerville-SemiBold" family="Baskerville" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -120,19 +125,27 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="bM1-41-ZjV" firstAttribute="top" secondItem="MLu-D3-Oi6" secondAttribute="bottom" constant="533" id="13j-hP-YvF"/>
-                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="trailing" secondItem="XTv-d7-mKB" secondAttribute="trailingMargin" constant="8" id="2BP-GE-aiM"/>
-                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="top" secondItem="MLu-D3-Oi6" secondAttribute="bottom" constant="8" id="4su-90-ybR"/>
-                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="leading" secondItem="XTv-d7-mKB" secondAttribute="leadingMargin" constant="8" id="Jsk-9j-CPd"/>
                             <constraint firstItem="HPh-Ab-sIZ" firstAttribute="trailing" secondItem="XTv-d7-mKB" secondAttribute="trailingMargin" id="LaQ-Bx-Yvg"/>
                             <constraint firstItem="MLu-D3-Oi6" firstAttribute="top" secondItem="HPh-Ab-sIZ" secondAttribute="bottom" constant="8" id="SOG-p6-HhI"/>
                             <constraint firstItem="bM1-41-ZjV" firstAttribute="top" secondItem="MLu-D3-Oi6" secondAttribute="bottom" constant="533" id="UhK-37-9vb"/>
                             <constraint firstItem="HPh-Ab-sIZ" firstAttribute="top" secondItem="Fjb-oL-Goo" secondAttribute="bottom" constant="8" id="bWs-0O-8nj"/>
+                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="centerY" secondItem="XTv-d7-mKB" secondAttribute="centerY" constant="-53" id="flF-hA-hTH"/>
                             <constraint firstItem="HPh-Ab-sIZ" firstAttribute="leading" secondItem="XTv-d7-mKB" secondAttribute="leadingMargin" id="gZL-Fb-vTT"/>
                             <constraint firstItem="MLu-D3-Oi6" firstAttribute="top" secondItem="HPh-Ab-sIZ" secondAttribute="bottom" constant="8" id="ixz-wO-9I4"/>
+                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="trailing" secondItem="XTv-d7-mKB" secondAttribute="trailingMargin" id="jiw-mL-YYX"/>
+                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="leading" secondItem="XTv-d7-mKB" secondAttribute="leadingMargin" id="pC6-lt-lsI"/>
+                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="top" secondItem="MLu-D3-Oi6" secondAttribute="bottom" constant="8" id="s2j-rL-a07"/>
                             <constraint firstItem="bM1-41-ZjV" firstAttribute="top" secondItem="HPh-Ab-sIZ" secondAttribute="bottom" constant="561" id="sb9-dC-POw"/>
                             <constraint firstItem="MLu-D3-Oi6" firstAttribute="leading" secondItem="XTv-d7-mKB" secondAttribute="leadingMargin" id="zM8-LU-ABw"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="airdate" destination="bnI-bV-YfY" id="LBl-55-FwO"/>
+                        <outlet property="episodeTitle" destination="HPh-Ab-sIZ" id="NOT-xD-Y4y"/>
+                        <outlet property="screenShot" destination="mr3-ab-0c2" id="IHd-u7-i0a"/>
+                        <outlet property="seasonNumEpisodeNum" destination="Moq-X4-G0V" id="TkI-RS-KJk"/>
+                        <outlet property="summary" destination="jmd-Qa-qf9" id="Utj-6g-RKf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W9r-sX-ZKV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
