--- a/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
+++ b/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
@@ -1,27 +1,45 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RzW-Uh-ojm">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RzW-Uh-ojm">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Game of Thrones Episodes-->
         <scene sceneID="sjx-cT-F0W">
             <objects>
                 <tableViewController id="W4q-qE-EWG" customClass="GameOfThronesTableViewController" customModule="AC3_2_GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="oAx-B9-1iZ">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="77" sectionHeaderHeight="28" sectionFooterHeight="28" id="oAx-B9-1iZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Gzx-2j-BOY">
-                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="episodeIdentifier" textLabel="9e7-zf-JGV" detailTextLabel="bGN-18-RdC" rowHeight="77" style="IBUITableViewCellStyleSubtitle" id="Gzx-2j-BOY">
+                                <rect key="frame" x="0.0" y="92" width="375" height="77"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gzx-2j-BOY" id="jys-lM-aJJ">
-                                    <frame key="frameInset" width="375" height="43"/>
+                                    <frame key="frameInset" width="375" height="76"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9e7-zf-JGV">
+                                            <frame key="frameInset" minX="15" minY="20" width="71" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="detailLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bGN-18-RdC">
+                                            <frame key="frameInset" minX="15" minY="41" width="62" height="15"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.40000000600000002" blue="1" alpha="0.35399721746575341" colorSpace="calibratedRGB"/>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -29,11 +47,65 @@
                             <outlet property="delegate" destination="W4q-qE-EWG" id="T33-lT-J3o"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="d3M-LG-Oge"/>
+                    <navigationItem key="navigationItem" title="Game of Thrones Episodes" id="d3M-LG-Oge"/>
+                    <connections>
+                        <segue destination="r7Z-Ax-NWX" kind="show" identifier="showEpisodeDetailIdentifier" id="QXq-6A-xXh"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Orb-fK-tUO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1012" y="160"/>
+            <point key="canvasLocation" x="1012" y="159.67016491754123"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="HZe-xa-XXx">
+            <objects>
+                <viewController id="r7Z-Ax-NWX" customClass="DetailViewController" customModule="AC3_2_GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sXI-k6-rRE"/>
+                        <viewControllerLayoutGuide type="bottom" id="pNA-tG-x6L"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="y99-KO-Yku">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RvH-8V-kIl" userLabel="Title Label">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="e9R-g4-vwZ" userLabel="Episode Image">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="175" id="PCo-LO-PbU"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="15" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npf-TW-Qp3" userLabel="Episode Summary">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RvH-8V-kIl" firstAttribute="leading" secondItem="y99-KO-Yku" secondAttribute="leadingMargin" constant="8" id="9bW-IC-45F"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="npf-TW-Qp3" secondAttribute="trailing" constant="8" id="G1C-cO-0sz"/>
+                            <constraint firstItem="e9R-g4-vwZ" firstAttribute="leading" secondItem="y99-KO-Yku" secondAttribute="leadingMargin" constant="51" id="Nxb-ik-GSV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RvH-8V-kIl" secondAttribute="trailing" constant="8" id="Roj-Mc-bOb"/>
+                            <constraint firstItem="pNA-tG-x6L" firstAttribute="top" secondItem="npf-TW-Qp3" secondAttribute="bottom" constant="8" id="T8m-hS-Y3n"/>
+                            <constraint firstItem="e9R-g4-vwZ" firstAttribute="top" secondItem="RvH-8V-kIl" secondAttribute="bottom" constant="26" id="ZBc-Br-4Qa"/>
+                            <constraint firstItem="e9R-g4-vwZ" firstAttribute="centerX" secondItem="y99-KO-Yku" secondAttribute="centerX" id="h0l-Pr-zdF"/>
+                            <constraint firstItem="RvH-8V-kIl" firstAttribute="top" secondItem="sXI-k6-rRE" secondAttribute="bottom" constant="8" id="mjg-u7-cXb"/>
+                            <constraint firstItem="npf-TW-Qp3" firstAttribute="leading" secondItem="y99-KO-Yku" secondAttribute="leadingMargin" constant="8" id="z40-k8-mKD"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="episodeImage" destination="e9R-g4-vwZ" id="Dq5-Cm-9xj"/>
+                        <outlet property="summaryLabel" destination="npf-TW-Qp3" id="HMv-Of-k0E"/>
+                        <outlet property="titleLabel" destination="RvH-8V-kIl" id="mDr-z5-lNw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CxA-25-lju" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1812" y="163.26836581709148"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KzA-EL-rAA">
